Try to fix this broken link

--- a/index.html
+++ b/index.html
@@ -1,1 +1,1 @@
-<meta http-equiv="refresh" content="0; url=http://agency-library.github.io/0.1.0/index.html" />
+<meta http-equiv="refresh" content="0; url=0.1.0/index.html" />
