--- a/modules.html
+++ b/modules.html
@@ -1,2 +1,2 @@
-<meta http-equiv="refresh" content="0; url=http://agency-library.github.io/0.1.0/modules.html" />
+<meta http-equiv="refresh" content="0; url=0.1.0/modules.html" />
 
